tests/negative/test_expr_dot_ptr_ptr.orb
data Foo {
    x:i32
};

fnc main() () {
    let f1:Foo;
    let (f2:(Foo*) (& f1));
    let (f3:(Foo**) (& f2));
    . f3 x;
};